@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.5 ===
+* Added 'Min' and 'Max' sidechain sources for the multiband expander.
 * Updated build scripts and dependencies.
 
 === 1.0.4 ===
